--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 	"dependencies": {
 		"@prismicio/client": "^6.7.1",
 		"@prismicio/helpers": "^2.3.6",
+		"@sveltejs/adapter-static": "^1.0.0-next.48",
 		"cmd-midterm-components": "^0.1.0"
 	}
 }
